--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "express": "^4.15.3",
     "glob": "^7.1.2",
-    "handlebars": "^4.0.10"
+    "handlebars": "^4.0.10",
+    "spdy": "^3.4.7"
   }
 }
