--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "prova",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build-css": "lessc static/less/index.less > static/css/index.css",
+    "watch-css": "catw -w 'static/less/**/*.less' -c 'npm run build-css'"
+    ,"build-css-prod":"postcss  static/css/index.css --use autoprefixer --autoprefixer.browsers '> 5%' -o static/css/index.css"
+ ,"mongo-win": "cd mongo-db & \"C:/Program Files/MongoDB/Server/3.4/bin/mongod.exe\" --dbpath C:/Users/marcogobbi/WebstormProjects/stonebridgestudio/mongo-db"
   },
   "repository": {
     "type": "git",
@@ -21,10 +24,13 @@
     "express": "^4.15.3",
     "glob": "^7.1.2",
     "handlebars": "^4.0.10",
-    "spdy": "^3.4.7"
-    ,  "fb": "^2.0.0"
+    "spdy": "^3.4.7",
+    "fb": "^2.0.0"
   },
   "devDependencies": {
-
+    "autoprefixer": "^7.1.2",
+    "catw": "^1.0.1",
+    "postcss-cli": "^4.1.0",
+    "watchify": "^3.9.0"
   }
 }
