--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
   "dependencies": {
     "barba.js": "^1.0.0",
     "body-parser": "^1.17.2",
+    "crypto": "0.0.3",
     "express": "^4.15.3",
     "fb": "^2.0.0",
     "glob": "^7.1.2",
     "handlebars": "^4.0.10",
+    "multer": "^1.3.0",
     "requirejs": "^2.3.4",
     "robojs": "^5.2.0",
     "spdy": "^3.4.7"
