--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.1",
   "description": "prova",
   "main": "index.js",
+  "engines": {
+    "node": "8.4.0",
+    "npm": "5.3.0"
+  },
   "scripts": {
     "build-css": "lessc static/less/index.less > static/css/index.css ",
-    "filerev":"node build-scripts/filerev.js",
+    "filerev": "node build-scripts/filerev.js",
     "watch-css": "catw -w 'static/less/**/*.less' -c 'npm run build-css'",
     "build-css-prod": "postcss  static/css/index.css --use autoprefixer --autoprefixer.browsers '> 5%' -o static/css/index.css && npm run filerev",
     "mongo-win": "cd mongo-db & \"C:/Program Files/MongoDB/Server/3.4/bin/mongod.exe\" --dbpath C:/Users/marcogobbi/WebstormProjects/stonebridgestudio/mongo-db",
@@ -25,6 +29,7 @@
     "barba.js": "^1.0.0",
     "body-parser": "^1.17.2",
     "cloudinary": "^1.9.0",
+    "compression": "^1.7.0",
     "crypto": "0.0.3",
     "dropbox": "^2.5.7",
     "dropbox-stream": "^1.0.5",
@@ -36,9 +41,11 @@
     "mongodb": "^2.2.30",
     "multer": "^1.3.0",
     "multer-storage-cloudinary": "^2.2.1",
+    "ramda": "^0.24.1",
     "requirejs": "^2.3.4",
     "robojs": "^5.2.0",
-    "spdy": "^3.4.7"
+    "spdy": "^3.4.7",
+    "speakingurl": "^14.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
