--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
   },
   "homepage": "https://github.com/marcog83/stonebridgestudio#readme",
   "dependencies": {
-
     "body-parser": "^1.17.2",
     "cloudinary": "^1.9.0",
     "compression": "^1.7.0",
@@ -51,6 +50,7 @@
     "autoprefixer": "^7.1.2",
     "catw": "^1.0.1",
     "chalk": "^2.1.0",
+    "clipboard": "^1.7.1",
     "convert-source-map": "^1.5.0",
     "each-async": "^1.1.1",
     "glob": "^7.1.2",
