--- a/package.json
+++ b/package.json
@@ -29,17 +29,21 @@
     "body-parser": "^1.17.2",
     "cloudinary": "^1.9.0",
     "compression": "^1.7.0",
+    "connect-ensure-login": "^0.1.1",
     "crypto": "0.0.3",
     "dropbox": "^2.5.7",
     "dropbox-stream": "^1.0.5",
     "express": "^4.15.3",
     "express-form-post": "^1.4.0",
+    "express-session": "^1.15.5",
     "fb": "^2.0.0",
     "glob": "^7.1.2",
     "handlebars": "^4.0.10",
     "mongodb": "^2.2.30",
     "multer": "^1.3.0",
     "multer-storage-cloudinary": "^2.2.1",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0",
     "ramda": "^0.24.1",
     "requirejs": "^2.3.4",
     "robojs": "^5.2.0",
