--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "cloudinary": "^1.9.0",
     "compression": "^1.7.0",
     "connect-ensure-login": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "crypto": "0.0.3",
     "dropbox": "^2.5.7",
     "dropbox-stream": "^1.0.5",
